# strongswan

./: configure.ac
conf/plugins/: kernel-snabb.opt
src/libcharon/: Makefile.am
src/libcharon/plugins/kernel_snabb/: Makefile.am  kernel_snabb_ipsec.c  kernel_snabb_ipsec.h  kernel_snabb_plugin.c  kernel_snabb_plugin.h
